[package]
name = "injector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi", "winbase", "winnt", "winerror", "synchapi", "handleapi", "errhandlingapi", "memoryapi", "libloaderapi", "wow64apiset", "psapi", "securitybaseapi"] }
log = "0.4.19"
simplelog = "0.12.1"
time = "0.3.23"
rand = "0.8.5"
clap = { version = "4.4.2", features = ["derive"] }
colored = "2.0.4"
